--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ main {
     align-items: center;
     width: 100%;
 }
-
+/* game background */
 section {
     width: 320px;
     background-color: darkblue;
@@ -12,7 +12,7 @@ section {
     flex-direction: column;
     align-items: center;
 }
-
+/* game"field" */
 .grid{
     width: 240px;
     height: 480px;
@@ -20,9 +20,13 @@ section {
     display: flex;
     flex-wrap: wrap;
 }
-
+/* individual grid locations */
 .grid div{
     width: 20px;
     height: 20px;
     background-color: red;
+}
+/*styling for all shapes */
+.shapes {
+    background-color: darkorange;
 }
