feat: added div that centers elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,10 @@ section {
 .shapes {
     background-color: darkorange;
 }
+
+/* div with centered content */
+.flexCenter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
