--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=EB+Garamond&display=swap');
+
 /* sets default colour, font and zeroes padding and margin */
 * {
     padding: 0;
@@ -7,6 +8,7 @@
     color: #ffffff;
     font-family: 'EB Garamond', sans-serif;
 }
+
 /* centers content in main */
 main {
     display: flex;
@@ -15,6 +17,10 @@ main {
     width: 100%;
 }
 
+/* style for paragraphs */
+p {
+    font-size: 1.5vh;
+}
 /* styles the div that displays the javascript disabled message */
 .no-script-div {
     background-color: #182834;
@@ -26,6 +32,21 @@ main {
     position: absolute;
     top: 100px;
     left: calc(50% - 110px);
+}
+/* styling for the game-rules div */
+.game-rules {
+    background-color: #182834;
+    border-radius: 10px;
+    padding: 24px;
+    width: 280px;
+    text-align: center;
+    z-index: 999;
+    position: absolute;
+    left: calc(50% - 140px);
+}
+/* hides the controls for keyboard paragraph for mobile view */
+.controls-keyboard {
+    display: none;
 }
 
 /* provides body background */
