--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ p {
     left: calc(50% - 110px);
 }
 /* styling for the game-rules div */
-.game-rules {
+#game_rules {
     background-color: #182834;
     border-radius: 10px;
     padding: 24px;
@@ -47,6 +47,13 @@ p {
 /* hides the controls for keyboard paragraph for mobile view */
 .controls-keyboard {
     display: none;
+}
+/* start button styling */
+#start_btn img{
+    border: 2px solid red;
+    margin-top: 16px;
+    border-radius: 15px;
+    padding: 0 60px 0 60px;
 }
 
 /* provides body background */
