--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,24 @@ used outline-offset for the same width as the outline otherwise the outline widt
     cursor: pointer;
 }
 
+/* styling for the 404 message*/
+#uh_oh {
+    background-color: #182834;
+    border-radius: 10px;
+    padding: 24px;
+    width: 280px;
+    text-align: center;
+    z-index: 999;
+    position: absolute;
+    left: calc(50% - 140px);
+    top: 8%;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+}
+
+#uh_oh p{
+    font-size: 100%;
+}
+
 /* Media Query: mobiles (320 px and up)*/
 @media screen and (min-width:320px) {
     #game_rules {
